added delete functionality for timeslots

--- a/food_redistribution/food_avail/templates/food_avail/view_food.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food.html
@@ -1,110 +1,110 @@
 {% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
-            <div class="alert alert-danger">
-                {{ field.label }} <strong>{{ error|escape }}</strong>
-            </div>
-        {% endfor %}
-    {% endfor %}
-    {% for error in form.non_field_errors %}
-        <div class="alert alert-danger">
-            {{ field.label }} <strong>{{ error|escape }}</strong>
-        </div>
-    {% endfor %}
+{% for field in form %}
+{% for error in field.errors %}
+<div class="alert alert-danger">
+    {{ field.label }} <strong>{{ error|escape }}</strong>
+</div>
+{% endfor %}
+{% endfor %}
+{% for error in form.non_field_errors %}
+<div class="alert alert-danger">
+    {{ field.label }} <strong>{{ error|escape }}</strong>
+</div>
+{% endfor %}
 {% endif %}
 {% if user.is_authenticated %}
 <div>
-  <div>
     <div>
-      <div>
-        <h4>
-          {{ food.author.username }}<br>
-        </h4>
-        </div>
         <div>
-          Food Available: {{ food.food_available }}<br>  
-          Description: {{ food.description }}<br>
-          {% endif %}
+            <div>
+                <h4>
+                    {{ food.author.username }}<br>
+                </h4>
+            </div>
+            <div>
+                Food Available: {{ food.food_available }}<br>
+                Description: {{ food.description }}<br>
+                {% endif %}
+            </div>
         </div>
-    </div>
 
-    <div class="row mt-2">
-        <div class="col-lg-6">
-            <div class="card">
-                <div class="card-title">
-                    <h4>Add Time Slot</h4>
-                    <br><br>
-                </div>
-                <div class="card-body">
-                    <div class="basic-form">
-                        <form method="post">
-                             {% csrf_token %}
-                            <input type="hidden" name="next" value="{{ next }}">
-                            <div class="form-group">
-                                <label>Start Time</label>
-                                <input type="time" name="start_time" class="form-control" value="12:00"  required>
-                            </div>
-                            <div class="form-group">
-                                <label>End Time</label>
-                                <input type="time" name="end_time" class="form-control" value="15:00"  required>
-                            </div>
-                            <button type="submit" class="button btn-success" style="cursor:pointer">Submit</button>
-                        </form>
+        <div class="row mt-2">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-title">
+                        <h4>Add Time Slot</h4>
+                        <br><br>
+                    </div>
+                    <div class="card-body">
+                        <div class="basic-form">
+                            <form method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="next" value="{{ next }}">
+                                <div class="form-group">
+                                    <label>Start Time</label>
+                                    <input type="time" name="start_time" class="form-control" value="12:00" required>
+                                </div>
+                                <div class="form-group">
+                                    <label>End Time</label>
+                                    <input type="time" name="end_time" class="form-control" value="15:00" required>
+                                </div>
+                                <button type="submit" class="button btn-success" style="cursor:pointer">Submit</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-lg-6">
-            <div class="card">
-              <div class="card-title">
-                <h4> List Of Time Slots </h4>
-              </div>
-              <div class="card-body">
-                  {% if time_slots_all %}
-                <div class="table-responsive">
-                  <table class="table table-hover ">
-                    <thead>
-                      <tr>
-                        <th>Start Time</th>
-                        <th>End Time</th>
-                          <th>Edit</th>
-                          <th>Delete</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                    {% for x in time_slots_all %}
-                      <tr>
-                          <td>{{x.start_time | time:'H:i:s'}}</td>
-                          <td>{{x.end_time | time:'H:i:s'}}</td>
-                          <td>
-                              <span>
-                                  <a href="{% url 'food_avail:update_time_slot' x.id %}" class="button button-primary">Edit</a>                                
-                              </span>
-                          </td>
-                          <td>
-                              <span>
-                                <a href="#" class="button button-primary">Delete</a>
-                              </span>
-                          </td>
-                      </tr>
-                    {% endfor %}
-                    </tbody>
-                  </table>
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-title">
+                        <h4> List Of Time Slots </h4>
+                    </div>
+                    <div class="card-body">
+                        {% if time_slots_all %}
+                        <div class="table-responsive">
+                            <table class="table table-hover ">
+                                <thead>
+                                    <tr>
+                                        <th>Start Time</th>
+                                        <th>End Time</th>
+                                        <th>Edit</th>
+                                        <th>Delete</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for x in time_slots_all %}
+                                    <tr>
+                                        <td>{{x.start_time | time:'H:i:s'}}</td>
+                                        <td>{{x.end_time | time:'H:i:s'}}</td>
+                                        <td>
+                                            <span>
+                                                <a href="{% url 'food_avail:update_time_slot' x.id %}"
+                                                    class="button button-primary">Edit</a>
+                                            </span>
+                                        </td>
+                                        <td>
+                                            <form action="{% url 'food_avail:delete_time_slot' x.id %}" method="POST">
+                                                {% csrf_token %}
+                                                  <input type="submit" class="button btn-warning" style="cursor:pointer;" value="Delete" onclick="return confirm('Are you sure you want to delete this?')">
+                                              </form>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    {% else %}
+                    <br>
+                    <p>No Time Slot Available.</p>
+                    {% endif %}
                 </div>
-              </div>
-                {% else %}
-                  <br>
-                        <p>No Time Slot Available.</p>
-                  {% endif %}
             </div>
         </div>
     </div>
 </div>
-</div>
 <div class="error-message">
     {% for message in messages %}
-        <p id="messages">{{message}}</p>
+    <p id="messages">{{message}}</p>
     {% endfor %}
 </div>
-
- 
