added base and navbar html file to all templates in food_avail

--- a/food_redistribution/food_avail/templates/food_avail/update_time_slot.html
+++ b/food_redistribution/food_avail/templates/food_avail/update_time_slot.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Edit Time Slot</title>
    </head>
+   {%  include 'food_avail/base.html' %}
     <div>
         {% if form.errors %}
     {% for field in form %}
