made some style changes to view_food_avail template

--- a/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
@@ -1,43 +1,56 @@
 {%  include 'food_avail/base.html' %}
 
-<table>
-    {% for key, value in user_info.items %}
-    {% for key2,value2 in value.items %}
-    <tr>
-        <td>{{key2}}:</td>
 
-        {% if key2 == 'timeslot' %}
-        <td>
-            {% if value2 %}
-            {% for i in value2 %}
+<div>
+    <div>
+        <div>
+            <div>
+                {% for u in user_info %}
+                <h4>
+                    {{ u.author }}<br>
+                </h4>
+            </div>
+            <div>
+                Food Available: {{ u.food_available }}<br>
+                Description: {{ u.description }}<br>
+            </div>
+        </div>
 
-
-
-            {{i.start_time}} <-> {{i.end_time}}
-
-
-
-                {% endfor %}
-                {% else %}
-        No Available Time slots
-        {% endif %}
-
-        </td>
-        {% else %}
-        <td>{{value2}}
-        <td>
-
-            {% endif %}
-    </tr>
-    {% endfor %}
-
-    {% endfor %}
-</table>
-
-
-
-
-
-</div>
-</div>
-</div>
+        <div class="row mt-2">
+            <div class="col-lg-6">
+                <div class="card">
+                    {% if u.timeslot %}
+                    <div class="card-title">
+                        <h4> List Of Time Slots </h4>
+                    </div>
+                    {% for t in u.timeslot %}
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover ">
+                                <thead>
+                                    <tr>
+                                        <th>Start Time</th>
+                                        <th>End Time</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                   
+                                    <tr>
+                                        <td>{{t.start_time | time:'H:i:s'}}</td>
+                                        <td>{{t.end_time | time:'H:i:s'}}</td>
+                    
+                                    </tr>
+                
+                                </tbody>
+                                {% endfor %}
+                            </table>
+                        </div>
+                    </div>
+                    {% else %}
+                    <p>{{u.author }} has not posted any timeslots yet.</p>
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
