--- a/food_redistribution/food_avail/static/food_avail/css/post_food_avail.css
+++ b/food_redistribution/food_avail/static/food_avail/css/post_food_avail.css
@@ -1,4 +1,17 @@
 body {
-  background-image: url("https://images.unsplash.com/photo-1543353071-10c8ba85a904?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80");
-  background-size: cover;
+  background-image: url("https://images.squarespace-cdn.com/content/v1/57879a6cbebafb879f256735/1579721909133-R2KSZ8VGDGBI90DYATBK/header4.jpg");
+}
+
+.heading_container {
+  width: 100%;
+  height: 4vh;
+  color: white;
+  justify-content: center;
+}
+
+.mainbody_container {
+  width: 100%;
+  height: 4vh;
+  color: white;
+  justify-content: center;
 }
