--- a/food_redistribution/food_avail/templates/food_avail/post_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/post_food_avail.html
@@ -36,7 +36,7 @@
         <form method="POST">
             {% csrf_token %}
             {{ food.as_p}}
-            <button type="submit">Post Availability</button>
+            <button class="button button1" type="submit">Post Availability</button>
             <br>
         </form>
         </div>
