--- a/food_redistribution/food_avail/templates/food_avail/view_food.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food.html
@@ -1,3 +1,4 @@
+{% load static %}
 {%  include 'food_avail/base.html' %}
 {% if form.errors %}
 {% for field in form %}
@@ -23,6 +24,18 @@
                 </h4>
             </div>
             <div>
+                <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Food Availability</title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="{% static 'food_avail/css/post_food_avail.css' %}" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
+
+	<!-- Material Design javascript --->
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
                 Food Available: {{ food.food_available }}<br>
                 Description: {{ food.description }}<br>
                 {% endif %}
@@ -49,7 +62,7 @@
                                     <label>End Time</label>
                                     <input type="time" name="end_time" class="form-control" value="15:00" required>
                                 </div>
-                                <button type="submit" class="button btn-success" style="cursor:pointer">Submit</button>
+                                <button type="submit" class="button button1 btn-success" style="cursor:pointer">Submit</button>
                             </form>
                         </div>
                     </div>
