--- a/food_redistribution/food_avail/static/food_avail/css/view_food.css
+++ b/food_redistribution/food_avail/static/food_avail/css/view_food.css
@@ -37,3 +37,7 @@ body {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
+
+.msg_container {
+  color: white;
+}
