--- a/food_redistribution/food_avail/static/food_avail/css/view_food.css
+++ b/food_redistribution/food_avail/static/food_avail/css/view_food.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("https://media.istockphoto.com/photos/man-smiles-while-picking-up-curbside-order-picture-id1318003130?b=1&k=20&m=1318003130&s=170667a&w=0&h=-FmEqD46sbBYRSG9I6vPYWdEB95JSqXEQT0hcuLkmsc=");
   background-size: cover;
+  display: flex;
 }
 
 .heading_container {
