styling progress view food avail

--- a/food_redistribution/food_avail/templates/food_avail/update_time_slot.html
+++ b/food_redistribution/food_avail/templates/food_avail/update_time_slot.html
@@ -38,7 +38,7 @@
                     <h4>Edit Time Slot</h4>
                     <br><br>
                 </div>
-                <div class="ma">
+                <div class="main">
                     <div>
                         <form method="post" action="">
                             {% csrf_token %}
