--- a/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food_avail.html
@@ -1,16 +1,30 @@
+{% load static %}
 {%  include 'food_avail/base.html' %}
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Edit Time Slot</title>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="{% static 'food_avail/css/food_avail.css' %}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 
+    <!-- Material Design javascript --->
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</head>
 
 <div>
     <div>
         <div>
-            <div>
+            <div class="heading_container">
                 {% for u in user_info %}
                 <h4>
                     {{ u.author }}<br>
                 </h4>
             </div>
-            <div>
+            <div class="main">
                 Food Available: {{ u.food_available }}<br>
                 Description: {{ u.description }}<br>
             </div>
