styling done for view food avail status bar redirected page

--- a/food_redistribution/food_avail/static/food_avail/css/post_food_avail.css
+++ b/food_redistribution/food_avail/static/food_avail/css/post_food_avail.css
@@ -1,5 +1,7 @@
 body {
   background-image: url("https://images.squarespace-cdn.com/content/v1/57879a6cbebafb879f256735/1579721909133-R2KSZ8VGDGBI90DYATBK/header4.jpg");
+  background-size: cover;
+  display: flex;
 }
 
 .heading_container {
