defined new Bookings model

--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -76,7 +76,7 @@
 								class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Post Food
 								Availability</a>
 					{% else %}
-					<a href="{% url 'food_avail:create_bookings' %}"
+					<a href="{% url 'food_avail:bookings' %}"
 								class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Book Pick-up Times</a>
 				</div>
 					{% endif %}
