--- a/food_redistribution/cal/templates/cal/create_event.html
+++ b/food_redistribution/cal/templates/cal/create_event.html
@@ -30,10 +30,10 @@ Event
         <br>
     </form>
 </main>-->
-
 <div class="screen">
   <div class="login-container">
     <div class="login-card mdl-card mdl-shadow--8dp">
+      {% if user.is_authenticated %}
       <div class="login-card-title">
         <h4>Create a new event</h4>
       </div>
@@ -77,6 +77,11 @@ Event
             </div>
           </form>
     </div>
-  </div>
-</div>
+      </div>
+      {% else %}
+        <div class="login-card-title">
+          <h4>Please log in to access this page.</h4>
+        </div>
+      {% endif %}
+    </div>
 {% endblock %}
