Updated About Us Page, and added navbars

--- a/food_redistribution/accounts/templates/accounts/about.html
+++ b/food_redistribution/accounts/templates/accounts/about.html
@@ -77,7 +77,8 @@
 
             </div>
             <div class="mdl-card__supporting-text">
-              Henry is...
+              Henry is pursuing a Master's degree in Computer Science at NYU Tandon, with an expected graduation date
+              in Dec 2022. He holds a B.S. in Electrical Engineer. 
             </div>
             <div class="mdl-card__actions mdl-card--border">
               <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login2' %}">
