--- a/food_redistribution/accounts/static/accounts/css/about.css
+++ b/food_redistribution/accounts/static/accounts/css/about.css
@@ -80,7 +80,7 @@ body {
 }
 
 .henry-card-title.mdl-card__title {
-  background: url('https://images.unsplash.com/photo-1519052537078-e6302a4968d4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background: url('../images/Henry_Tse_Pic.jpg') top 27% right 40%;
   height: 60vh;
 }
 
