can update photos in blog post

--- a/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
@@ -18,7 +18,7 @@
     {% if user.id == post.author.id %}
         <h1> Edit a post here...</h1>
 
-        <form method = "POST">
+        <form method = "POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p}}
             <button> Update!</button>
