made meals available dynamic so it updates with every booking

--- a/food_redistribution/accounts/templates/accounts/newnavbar.html
+++ b/food_redistribution/accounts/templates/accounts/newnavbar.html
@@ -23,6 +23,7 @@
               {% if user.rest %}
                 <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout' %}">Log out</a>
               {% else %}
+              <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'food_avail:view_bookings' %}">View Bookings</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect" href="{% url 'accounts:logout2' %}">Log out</a>
               {% endif %}
             {% else %}
