added to own about page

--- a/food_redistribution/accounts/templates/accounts/about.html
+++ b/food_redistribution/accounts/templates/accounts/about.html
@@ -107,12 +107,15 @@
             <div class="satyen-card-title mdl-card__title mdl-card--expand ">
             </div>
             <div class="mdl-card__supporting-text">
-              Satyen is...
+              Satyen is pursuing a Master's Degree in Computer Science at NYU Tandon, with a focus in Machine Learning and Deep Learning. His expected graduation date in December 2022. 
+              He holds a B.S in Business and Technology Management from NYU Tandon (2021).
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login2' %}">
-                Login
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://github.com/ssingh1997">
+                GitHub
               </a>
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.linkedin.com/in/satyen-singh-709900116/">
+                LinkedIn
             </div>
           </div>
         </div>
