Adding delete button to blog-delete and calender-event delete

--- a/food_redistribution/accounts/templates/accounts/blogposts/delete_post.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/delete_post.html
@@ -32,4 +32,5 @@
 
     Please login to access this page!
 {% endif %}
+<a  href="javascript:history.back()" style="font-family:Optima;">Cancel</a>
 {% endblock %}
