--- a/food_redistribution/cal/templates/cal/delete_event.html
+++ b/food_redistribution/cal/templates/cal/delete_event.html
@@ -19,6 +19,7 @@ Event
             {% else %}
             <strong>Only the author can delete this event!</strong><br/><br/>
             {% endif %}
+            <a  href="javascript:history.back()" style="font-family:Optima;">Cancel</a>
         </form>
         
 </body>
