alignment and break line view food

--- a/food_redistribution/food_avail/templates/food_avail/view_food.html
+++ b/food_redistribution/food_avail/templates/food_avail/view_food.html
@@ -45,10 +45,10 @@
                 {% endif %}
             </div>
         </div>
-
+        <br>
         <div class="row mt-2">
             <div class="col-lg-6">
-                <div class="card">
+                <div class="card" style="margin-left:3%">
                     <div class="card-title">
                         <h4>Add Time Slot</h4>
                         <br><br>
