--- a/food_redistribution/accounts/templates/accounts/blogposts/addpost.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/addpost.html
@@ -7,7 +7,8 @@
   	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   	<link rel="stylesheet" href="{% static 'accounts/css/material.min.css' %}"/>
   	<link rel="stylesheet" href="{% static 'accounts/css/newnav.css' %}">
-  	<link rel="preconnect" href="https://fonts.googleapis.com">
+  	<link rel="stylesheet" href="{% static 'accounts/css/add_post.css' %}" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
   	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   	<link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 
@@ -15,15 +16,16 @@
   	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 {% if user.is_authenticated %}
-<h4> Add a post here...</h4>
-
-<form method = "POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p}}
-    <button> Post!</button>
-
-
-</form>
+<body>
+	<div class="mainbody_container">
+	<h3> Add a post here...</h3>
+	<form method = "POST" enctype="multipart/form-data">
+		{% csrf_token %}
+		{{ form.as_p}}
+		<button class="button button1"> Post!</button>
+	</form>
+	</div>
+</body>
 {% else %}
 
     Please login to access this page!
