--- a/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
@@ -7,7 +7,8 @@
   	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   	<link rel="stylesheet" href="{% static 'accounts/css/material.min.css' %}"/>
   	<link rel="stylesheet" href="{% static 'accounts/css/newnav.css' %}">
-  	<link rel="preconnect" href="https://fonts.googleapis.com">
+  	<link rel="stylesheet" href="{% static 'accounts/css/add_post.css' %}" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
   	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   	<link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
 
@@ -15,19 +16,23 @@
   	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 {% if user.is_authenticated %}
+<body>
+    <div class="mainbody_container">
     {% if user.id == post.author.id %}
         <h1> Edit a post here...</h1>
 
         <form method = "POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p}}
-            <button> Update!</button>
+            <button class="button button1"> Update!</button>
 
 
         </form>
         {% else %}
             Only the author can edit this post!
         {% endif %}
+    </div>
+</body>
 {% else %}
 
     Please login to access this page!
