--- a/food_redistribution/accounts/static/accounts/css/detailedblog.css
+++ b/food_redistribution/accounts/static/accounts/css/detailedblog.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://media.istockphoto.com/photos/antique-glass-clocks-in-the-desert-picture-id1279083466?b=1&k=20&m=1279083466&s=170667a&w=0&h=v2VkLGAXg0yDjHnxCO99FQKTlZTZ3f6JkLAcAC8PeUs=");
+  background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8fA%3D%3D&w=1000&q=80");
   background-size: cover;
 }
 
@@ -10,8 +10,12 @@ body {
   justify-content: center;
 }
 
-.main {
-  color: white;
+.mainbody_container {
+  height: 4vh;
+  margin-left: 40%;
+  color: black;
+  width: 75%;
+  justify-content: center;
 }
 
 .button {
